# gluesql

./: .gitignore  Cargo.toml
.github/workflows/: java.yml  publish-java.yml
core/src/executor/: execute.rs
pkg/java/: Cargo.toml  README.md  build.gradle  build.gradle.kts
pkg/java/examples/: BasicExample.java
pkg/java/src/: callback.rs  error.rs  lib.rs  payload.rs  storages.rs
pkg/java/src/main/java/org/gluesql/: GlueSQL.java  GlueSQLException.java  QueryCallback.java  QueryResult.java
pkg/java/src/test/java/org/gluesql/: GlueSQLExceptionTest.java  GlueSQLNativeAsyncTest.java  GlueSQLTest.java  QueryResultTest.java  SimpleMemoryTest.java  StorageIntegrationTest.java
pkg/javascript/src/: payload.rs
pkg/python/src/: payload.rs
